--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build:full": "cd ../frontend && npm install && npm run build && cd ../backend && npm install",
     "test": "jest"
   },
   "keywords": [
